--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>my simple speaker verification</h1>
     <div id="controls">
-        <button id="recordButton">Record</button>
+        <button id="recordButtonss">Record</button>
         <button id="pauseButton" disabled>Pause</button>
         <button id="stopButton" disabled>Stop</button>
         <button id="resultButton" disabled onclick="location.href = '/data';">Result</button>
